@@ -1,0 +1,88 @@
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderBlock {P} at (0,0) size 784x18
+        RenderText {TEXT} at (0,0) size 269x18
+          text run at (0,0) width 269: "Tests: the TABLE.createCaption() method"
+        RenderBR {BR} at (0,0) size 0x0
+      RenderBlock {P} at (0,34) size 784x54
+        RenderText {TEXT} at (0,0) size 73x18
+          text run at (0,0) width 73: "Conditions:"
+        RenderBR {BR} at (0,0) size 0x0
+        RenderText {TEXT} at (0,18) size 783x36
+          text run at (0,18) width 679: "If no caption exists, the method should create an empty caption, add it to the table, and return a pointer to it. "
+          text run at (679,18) width 104: "If a caption does"
+          text run at (0,36) width 285: "exist, the method should return a pointer to it."
+      RenderBlock {P} at (0,104) size 784x36
+        RenderText {TEXT} at (0,0) size 324x18
+          text run at (0,0) width 324: "If successful, the first table should have the caption "
+        RenderInline {B} at (0,0) size 43x18
+          RenderText {TEXT} at (324,0) size 43x18
+            text run at (324,0) width 43: "Fruity"
+        RenderText {TEXT} at (367,0) size 293x18
+          text run at (367,0) width 293: ", and the second table should have the caption "
+        RenderInline {B} at (0,0) size 75x18
+          RenderText {TEXT} at (660,0) size 75x18
+            text run at (660,0) width 75: "Vegetabley"
+        RenderText {TEXT} at (735,0) size 779x36
+          text run at (735,0) width 44: ". Upon"
+          text run at (0,18) width 584: "failure, the first table will have no caption, and the second table will have the caption Things."
+      RenderBlock {HR} at (0,156) size 784x2 [border: (1px inset #000000)]
+      RenderTable {TABLE} at (0,166) size 111x94 [border: (1px outset #808080)]
+        RenderBlock {CAPTION} at (0,0) size 109x18
+          RenderInline {B} at (0,0) size 43x18
+            RenderText {TEXT} at (33,0) size 43x18
+              text run at (33,0) width 43: "Fruity"
+        RenderTableSection {TBODY} at (1,19) size 0x74
+          RenderTableRow {TR} at (0,0) size 0x0
+            RenderTableCell {TH} at (2,2) size 52x22 [border: (1px inset #808080)] [r=0 c=0 rs=1 cs=1]
+              RenderText {TEXT} at (8,2) size 35x18
+                text run at (8,2) width 35: "Fruit"
+            RenderTableCell {TH} at (56,2) size 51x22 [border: (1px inset #808080)] [r=0 c=1 rs=1 cs=1]
+              RenderText {TEXT} at (6,2) size 39x18
+                text run at (6,2) width 39: "Color"
+          RenderTableRow {TR} at (0,0) size 0x0
+            RenderTableCell {TD} at (2,26) size 52x22 [border: (1px inset #808080)] [r=1 c=0 rs=1 cs=1]
+              RenderText {TEXT} at (2,2) size 48x18
+                text run at (2,2) width 48: "Banana"
+            RenderTableCell {TD} at (56,26) size 51x22 [border: (1px inset #808080)] [r=1 c=1 rs=1 cs=1]
+              RenderText {TEXT} at (2,2) size 47x18
+                text run at (2,2) width 47: "Yellow"
+          RenderTableRow {TR} at (0,0) size 0x0
+            RenderTableCell {TD} at (2,50) size 52x22 [border: (1px inset #808080)] [r=2 c=0 rs=1 cs=1]
+              RenderText {TEXT} at (2,2) size 39x18
+                text run at (2,2) width 39: "Grape"
+            RenderTableCell {TD} at (56,50) size 51x22 [border: (1px inset #808080)] [r=2 c=1 rs=1 cs=1]
+              RenderText {TEXT} at (2,2) size 41x18
+                text run at (2,2) width 41: "Purple"
+      RenderBlock (anonymous) at (0,260) size 784x18
+        RenderBR {BR} at (0,0) size 0x18
+      RenderTable {TABLE} at (0,278) size 130x94 [border: (1px outset #808080)]
+        RenderBlock {CAPTION} at (0,0) size 128x18
+          RenderInline {B} at (0,0) size 75x18
+            RenderText {TEXT} at (26,0) size 75x18
+              text run at (26,0) width 75: "Vegetabley"
+        RenderTableSection {TBODY} at (1,19) size 0x74
+          RenderTableRow {TR} at (0,0) size 0x0
+            RenderTableCell {TH} at (2,2) size 71x22 [border: (1px inset #808080)] [r=0 c=0 rs=1 cs=1]
+              RenderText {TEXT} at (2,2) size 67x18
+                text run at (2,2) width 67: "Vegetable"
+            RenderTableCell {TH} at (75,2) size 51x22 [border: (1px inset #808080)] [r=0 c=1 rs=1 cs=1]
+              RenderText {TEXT} at (6,2) size 39x18
+                text run at (6,2) width 39: "Color"
+          RenderTableRow {TR} at (0,0) size 0x0
+            RenderTableCell {TD} at (2,26) size 71x22 [border: (1px inset #808080)] [r=1 c=0 rs=1 cs=1]
+              RenderText {TEXT} at (2,2) size 40x18
+                text run at (2,2) width 40: "Carrot"
+            RenderTableCell {TD} at (75,26) size 51x22 [border: (1px inset #808080)] [r=1 c=1 rs=1 cs=1]
+              RenderText {TEXT} at (2,2) size 47x18
+                text run at (2,2) width 47: "Orange"
+          RenderTableRow {TR} at (0,0) size 0x0
+            RenderTableCell {TD} at (2,50) size 71x22 [border: (1px inset #808080)] [r=2 c=0 rs=1 cs=1]
+              RenderText {TEXT} at (2,2) size 66x18
+                text run at (2,2) width 66: "Cucumber"
+            RenderTableCell {TD} at (75,50) size 51x22 [border: (1px inset #808080)] [r=2 c=1 rs=1 cs=1]
+              RenderText {TEXT} at (2,2) size 39x18
+                text run at (2,2) width 39: "Green"
